--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "next": "15.1.7",
+    "axios": "^1.7.9",
+    "react-router-dom": "^7.1.5",
+    "cookie": "^1.0.2"
   },
   "devDependencies": {
     "typescript": "^5",
