commit authentefication not done yet

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "next": "15.1.7",
     "axios": "^1.7.9",
     "react-router-dom": "^7.1.5",
-    "cookie": "^1.0.2"
+    "cookie": "^1.0.2",
+    "react-hook-form": "^7.54.2",
+    "joi": "^17.13.3",
+    "@hookform/resolvers": "^4.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
